--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -4,10 +4,10 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">v{{ site.data.package.version }}</span>
 		<div class="demo">
-			<output class="out"></output>
-			<input type="text" class="in" value="Get rid of pasta in your code">
-			<pre class="prettyprint lang-html"><code>&lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
-&lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
+			<output class="out">Get rid of pasta in your code</output>
+			<input type="text" class="in">
+			<pre class="prettyprint lang-html"><code>&lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
+&lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
 
 &lt;script src=&quot;matreshka.min.js&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
