--- a/src/_includes/ru/promo.html
+++ b/src/_includes/ru/promo.html
@@ -4,8 +4,8 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">v{{ site.data.package.version }}</span>
 		<div class="demo">
-			<output class="out"></output>
-			<input type="text" class="in" value="Понятные приложения без макарон">
+			<output class="out">Понятные приложения без макарон</output>
+			<input type="text" class="in">
 			<pre class="prettyprint lang-html"><code>&lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
 &lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
 
