--- a/src/_includes/ru/doc_content.html
+++ b/src/_includes/ru/doc_content.html
@@ -13185,6 +13185,9 @@ magic.mediate(object, 'z', Number);
 <pre class="prettyprint source lang-js"><code>require(['magic/matreshka-magic.min'], function(magic) {
     //...
 });</code></pre><pre class="prettyprint source lang-js"><code>var magic = require('magic/matreshka-magic.min');</code></pre><p>На момент написания этой документации, файл <strong>matreshka-magic.min.js</strong> занимает чуть меньше 30КБ в несжатом виде против 46КБ <strong>matreshka.min.js</strong>. Если на каком-то этапе потребуется подключить весь фреймворк в проект, нужно лишь изменить пути к файлу скрипта и поменять имена переменных с <code>magic</code> или <code>MatreshkaMagic</code> на <code>MK</code> или <code>Matreshka</code> (второе обязательно только в том случае, если вы не используете AMD или CJS в проекте).</p></article><article id="!whats-new"><h2><a href="#!whats-new">Что нового?</a></h2><p>Не забывайте голосовать за новые возможности в <a href="https://trello.com/b/E5KcQESk/matreshka-js-features">trello</a>.</p>
+<h3><a href="https://github.com/finom/matreshka/releases/tag/v1.7.1">Матрешка 1.7.1</a></h3><ul>
+<li>Исправлена ошибка <code>bindNode</code>: метод генерировал ошибку при передаче объекта ключ-нода.</li>
+</ul>
 <h3><a href="https://github.com/finom/matreshka/releases/tag/v1.7.0">Матрешка 1.7.0</a></h3><ul>
 <li>Добавлен метод <a href="#!Matreshka.setProto">Matreshka.setProto</a>, позволяющий унаследовать прототип класса <code>Matreshka</code> от другого объекта.</li>
 <li>Исправлен баг, при котором узел, генерируемый <code>itemRenderer</code> обрамлялся тегом <code>span</code>, при использовании <code>jQuery</code>.</li>
