--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -4,7 +4,7 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">v{{ site.data.package.version }}</span>
 		<div class="demo">
-			<output class="out">Get rid of pasta in your code</output>
+			<output class="out">The easiest framework in the Universe</output>
 			<input type="text" class="in">
 			<pre class="prettyprint lang-html"><code>&lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
 &lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
@@ -13,7 +13,7 @@
 &lt;script&gt;
 var app = new Matreshka();
 app.bindNode('x', '.in, .out');
-app.x = 'Get rid of pasta in your code';
+app.x = 'The easiest framework in the Universe';
 &lt;/script&gt;</code></pre>
 		</div>
 		<p>
