--- a/src/_includes/en/doc_menu.html
+++ b/src/_includes/en/doc_menu.html
@@ -1403,6 +1403,17 @@
 									</a>
 								</li>
 							
+								<li>
+									<a
+										href="#!Matreshka.binders.dropFiles"
+										title="Returns binder which allows to drop files from a file manager to given block."
+										data-name="binders.dropFiles"
+										data-since="1.8"
+										data-importance="2">
+										dropFiles
+									</a>
+								</li>
+							
 						</ul>
 					</div>
 				</li>
