--- a/src/_includes/ru/doc_menu.html
+++ b/src/_includes/ru/doc_menu.html
@@ -1403,6 +1403,17 @@
 									</a>
 								</li>
 							
+								<li>
+									<a
+										href="#!Matreshka.binders.dropFiles"
+										title="Возвращает байндер, позволяющий перетаскивать файлы в заданный блок из файлового менеджера (drag'n'drop)."
+										data-name="binders.dropFiles"
+										data-since="1.8"
+										data-importance="2">
+										dropFiles
+									</a>
+								</li>
+							
 						</ul>
 					</div>
 				</li>
